--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,281 @@
-body {
-  background-color: red;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role=list],
+ol[role=list] {
+  list-style: none;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+*::before,
+*::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+body {
+  font-family: "Inter", sans-serif;
+  color: #ffffff;
+}
+
+p {
+  font-size: 0.75rem;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  /* added line */
+  border: 0;
+}
+
+.wrapper {
+  min-height: 100vh;
+  background-image: url("../../assets/mobile/bg-image-daytime.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #303030;
+  background-blend-mode: overlay;
+  padding: 2rem 1.5rem;
+}
+
+.evening {
+  background-image: url("../../assets/mobile/bg-image-nighttime.jpg");
+}
+
+@media screen and (min-width: 38.75rem) {
+  .wrapper {
+    background-image: url("../../assets/tablet/bg-image-daytime.jpg");
+  }
+
+  .evening {
+    background-image: url("../../assets/tablet/bg-image-nighttime.jpg");
+  }
+}
+@media screen and (min-width: 67.5rem) {
+  .wrapper {
+    background-image: url("../../assets/desktop/bg-image-daytime.jpg");
+  }
+
+  .evening {
+    background-image: url("../../assets/desktop/bg-image-nighttime.jpg");
+  }
+}
+.refresh {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  flex: 1 1 20%;
+  display: flex;
+  justify-content: right;
+}
+
+.quortations {
+  flex: 1 1 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.author {
+  font-weight: 900;
+}
+
+.intro {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+.intro__out {
+  display: none;
+}
+
+.time__section {
+  margin-top: 16rem;
+}
+
+.time__sectionA {
+  display: flex;
+  justify-content: start;
+  gap: 2rem;
+}
+
+.time__icon {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.greet__msg {
+  font-weight: 100;
+  font-size: 0.9375rem;
+}
+
+.time__status {
+  font-size: 6.25rem;
+  font-weight: 700;
+}
+
+.location {
+  font-size: 0.9375rem;
+  font-weight: 500;
+}
+
+.time__toggle {
+  margin-top: 4rem;
+}
+
+.switch {
+  position: relative;
+  display: flex;
+  max-width: 9rem;
+  background-color: #ffffff;
+  justify-content: space-between;
+  padding: 0.4rem;
+  border-radius: 30px;
+}
+
+.slider {
+  width: 2rem;
+  height: 2rem;
+}
+
+.more {
+  color: black;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.swithCtl {
+  margin-top: 3rem;
+}
+
+/*
+
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: hsl(237, 63%, 64%);
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #ccc;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+*/
 
 /*# sourceMappingURL=main.css.map */
