--- a/src/scss/layouts/_wrapper.scss
+++ b/src/scss/layouts/_wrapper.scss
@@ -1,9 +1,33 @@
+@use '../abstracts';
 .wrapper {
     min-height: 100vh;
     background-image: url("../../assets/mobile/bg-image-daytime.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: abstracts.$mid-grey;
+    background-blend-mode: overlay;
+    padding: 2rem 1.5rem;
 }
 .evening {
     background-image: url("../../assets/mobile/bg-image-nighttime.jpg");
 }
+
+@media screen and (min-width: 38.75rem) {
+    .wrapper {      
+        background-image: url("../../assets/tablet/bg-image-daytime.jpg");       
+    }
+    .evening {
+        background-image: url("../../assets/tablet/bg-image-nighttime.jpg");
+    }
+}
+
+
+@media screen and (min-width: 67.5rem) {
+    .wrapper {      
+        background-image: url("../../assets/desktop/bg-image-daytime.jpg");       
+    }
+    .evening {
+        background-image: url("../../assets/desktop/bg-image-nighttime.jpg");
+    }
+}
+
