--- a/src/scss/components/_toggle.scss
+++ b/src/scss/components/_toggle.scss
@@ -5,6 +5,7 @@
     display: flex;
     max-width: 9rem;
     background-color: abstracts.$white;
+    align-items: center;
     justify-content: space-between;
     padding: .4rem;
     border-radius: 30px;
