--- a/src/scss/layouts/_wrapper.scss
+++ b/src/scss/layouts/_wrapper.scss
@@ -6,7 +6,7 @@
     background-size: cover;
     background-color: abstracts.$mid-grey;
     background-blend-mode: overlay;
-    padding: 2rem 1.5rem;
+    padding: 2rem 0 0;
 }
 .evening {
     background-image: url("../../assets/mobile/bg-image-nighttime.jpg");
