--- a/src/scss/layouts/_wrapper.scss
+++ b/src/scss/layouts/_wrapper.scss
@@ -7,6 +7,7 @@
     background-color: abstracts.$mid-grey;
     background-blend-mode: overlay;
     padding: 2rem 0 0;
+    position: relative;
 }
 .evening {
     background-image: url("../../assets/mobile/bg-image-nighttime.jpg");
