--- a/src/scss/layouts/_main-section.scss
+++ b/src/scss/layouts/_main-section.scss
@@ -7,3 +7,11 @@
 		padding: 0 4rem 2rem;
 	}
 }
+
+@media screen and (min-width: 67.5rem) {
+	.time__location {
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-end;
+	}
+}
