--- a/src/css/main.css
+++ b/src/css/main.css
@@ -111,6 +111,13 @@ p {
     padding: 0 4rem 2rem;
   }
 }
+@media screen and (min-width: 67.5rem) {
+  .time__location {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+}
 .wrapper {
   min-height: 100vh;
   background-image: url("../../assets/mobile/bg-image-daytime.jpg");
@@ -119,6 +126,7 @@ p {
   background-color: #303030;
   background-blend-mode: overlay;
   padding: 2rem 0 0;
+  position: relative;
 }
 
 .evening {
@@ -192,6 +200,11 @@ p {
 .greet__msg {
   font-weight: 100;
   font-size: 0.9375rem;
+  text-transform: uppercase;
+}
+
+.greet__msg__hide {
+  display: none;
 }
 
 .time__status {
@@ -219,6 +232,11 @@ p {
   display: none;
 }
 
+@media screen and (min-width: 38.75rem) {
+  .greet__msg__hide {
+    display: inline-block;
+  }
+}
 .switch {
   position: relative;
   display: flex;
@@ -237,6 +255,7 @@ p {
 
 .more {
   color: black;
+  padding-left: 1.5rem;
 }
 
 .switch input {
@@ -300,6 +319,8 @@ input:checked+.slider:before {
 */
 .secondary {
   background-color: #d8d8d8;
+  position: relative;
+  bottom: 0;
 }
 
 .secondary__data {
@@ -333,6 +354,27 @@ input:checked+.slider:before {
 
 .hide__sec {
   display: none;
+}
+
+@media screen and (min-width: 38.75rem) {
+  .secondary__data {
+    padding: 2rem 4rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+  }
+  .secondary__data li + li {
+    margin-bottom: 0;
+  }
+
+  .list__items {
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 67.5rem) {
+  .secondary {
+    min-height: 40vh;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
