--- a/src/scss/components/_quortes.scss
+++ b/src/scss/components/_quortes.scss
@@ -2,20 +2,21 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
-    flex: 1 1 20%;
+   // flex: 1 1 20%;
     display: flex;
     justify-content: right;
 }
 
 .quortations {
-    flex: 1 1 80%;
+  // flex: 1 1 80%;
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    margin-right: 1rem;
 }
 
 .author {
-	font-weight: 900;
+    font-weight: 900;
 }
 
 .intro {
@@ -26,4 +27,17 @@
 
 .intro__out {
     display: none;
+}
+
+.quortes,
+.author {
+    font-size: 0.75rem;
+}
+
+@media screen and (min-width: 38.75rem) {
+
+    .quortes,
+    .author {
+        font-size: 1.125rem;
+    }
 }
