--- a/src/scss/components/_toggle.scss
+++ b/src/scss/components/_toggle.scss
@@ -17,9 +17,11 @@
 }
 
 .more {
-	color: black;
+    color: black;
     padding-left: 1.5rem;
+    font-size: 1rem;
 }
+
 .switch input {
     opacity: 0;
     width: 0;
@@ -27,7 +29,13 @@
 }
 
 .swithCtl {
-	margin-top: 3rem;
+    margin-top: 3rem;
+}
+
+@media screen and (min-width: 38.75rem) {
+    .swithCtl {
+        margin-top: 5rem;
+    }
 }
 
 /*
