js logic for secondary

--- a/src/scss/layouts/_wrapper.scss
+++ b/src/scss/layouts/_wrapper.scss
@@ -5,8 +5,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-color: abstracts.$mid-grey;
-    background-blend-mode: overlay;
-    padding: 2rem 0 0;
+   // background-blend-mode: overlay;
+    padding: 2rem 0 3rem;
     position: relative;
 }
 .evening {
