--- a/src/scss/layouts/_wrapper.scss
+++ b/src/scss/layouts/_wrapper.scss
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-color: abstracts.$mid-grey;
-   // background-blend-mode: overlay;
+    background-blend-mode: overlay;
     padding: 2rem 0 3rem;
     position: relative;
 }
