--- a/src/scss/layouts/_wrapper.scss
+++ b/src/scss/layouts/_wrapper.scss
@@ -8,6 +8,8 @@
     background-blend-mode: overlay;
     padding: 2rem 0 3rem;
     position: relative;
+    max-width: 1480px;
+    margin: auto;
 }
 .evening {
     background-image: url("../../assets/mobile/bg-image-nighttime.jpg");
