--- a/src/scss/components/_quortes.scss
+++ b/src/scss/components/_quortes.scss
@@ -41,3 +41,9 @@
         font-size: 1.125rem;
     }
 }
+
+@media screen and (min-width: 67.5rem) { 
+    .intro {
+        max-width: 60%;
+    }
+}
