--- a/src/scss/components/_quortes.scss
+++ b/src/scss/components/_quortes.scss
@@ -1,10 +1,15 @@
 .refresh {
     background-color: transparent;
-    border: none;
-    cursor: pointer;
+    border: none;  
    // flex: 1 1 20%;
     display: flex;
     justify-content: right;
+
+    &:hover, &:focus {
+        cursor: pointer;
+        outline: dashed currentColor;
+        outline-offset: .25em;
+    }
 }
 
 .quortations {
