--- a/src/scss/components/_time.scss
+++ b/src/scss/components/_time.scss
@@ -3,6 +3,10 @@
     // max-width: 17.375rem;
 }
 
+.time__zone {
+	text-decoration: none;
+}
+
 .time__sectionA {
     display: flex;
     justify-content: start;
