--- a/src/scss/components/_toggle.scss
+++ b/src/scss/components/_toggle.scss
@@ -9,6 +9,13 @@
     justify-content: space-between;
     padding: .4rem;
     border-radius: 30px;
+
+    
+    &:hover, &:focus {
+        cursor: pointer;
+        outline: dashed currentColor;
+        outline-offset: .25em;
+    }
 }
 
 .slider {
@@ -26,6 +33,7 @@
     opacity: 0;
     width: 0;
     height: 0;
+
 }
 
 .swithCtl {
@@ -41,4 +49,3 @@
         margin-top: 5rem;
     }
 }
-
